# yarp-kinfu

./: .gitignore  CMakeLists.txt
programs/: CMakeLists.txt
programs/yarpKinectFusion/: CMakeLists.txt  YarpKinectFusion.cpp  YarpKinectFusion.hpp  main.cpp
src/: CMakeLists.txt  CloudVisualizer.cpp  CloudVisualizer.hpp  YarpDepthToPc.cpp  YarpDepthToPc.hpp  YarpKinFu.cpp  YarpKinFu.hpp  main.cpp  yarpDepthToPc.cpp  yarpKinFu.cpp
